--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "test-boilerplate",
   "version": "1.0.0",
-  "description": "",
+  "description": "```   npm install",
   "main": "index.js",
   "scripts": {
     "dev": "NODE_ENV=development nodemon ./src/index.js",
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-validator": "^5.3.1"
   },
@@ -19,5 +20,17 @@
     "chai-http": "^4.2.1",
     "mocha": "^6.0.2",
     "nodemon": "^1.18.10"
-  }
+  },
+  "directories": {
+    "doc": "docs",
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cpt-chewieeee/test_boilerplate.git"
+  },
+  "bugs": {
+    "url": "https://github.com/cpt-chewieeee/test_boilerplate/issues"
+  },
+  "homepage": "https://github.com/cpt-chewieeee/test_boilerplate#readme"
 }
