--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "```   npm install",
   "main": "index.js",
   "scripts": {
+    "start": "concurrently \"npm run dev\" \"npm run client\"",
+    "client": "cd client && npm start",
     "dev": "NODE_ENV=development nodemon ./src/index.js",
     "test": "NODE_ENV=test mocha --exit"
   },
@@ -11,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "concurrently": "^4.1.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-validator": "^5.3.1"
