--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "client": "cd client && npm start",
     "staging": "NODE_ENV=staging node ./src/index.js",
     "dev": "NODE_ENV=development nodemon ./src/index.js",
-    "test": "NODE_ENV=test mocha --exit"
+    "test": "NODE_ENV=test mocha --exit",
+    "heroku-postbuild": "cd client/ && npm install"
   },
   "author": "",
   "license": "ISC",
