--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "start": "concurrently \"npm run staging\" \"npm run client\"",
     "client": "cd client && npm start",
-    "staging": "NODE_ENV=staging node ./src/index.js",
+    "staging": "node ./src/index.js",
     "dev": "NODE_ENV=development nodemon ./src/index.js",
     "test": "NODE_ENV=test mocha --exit",
-    "heroku-postbuild": "cd client/ && npm install"
+    "heroku-postbuild": "cd client/ && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
