--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "concurrently \"npm run staging\" \"npm run client\"",
+    "start:dev": "concurrently \"npm run dev\" \"npm run client\"",
     "client": "cd client && npm start",
     "staging": "node ./src/index.js",
     "dev": "NODE_ENV=development nodemon ./src/index.js",
